# budrami-django

./: README.md  gege.py  pyproject.toml
.vercel/: project.json
gemini/: db.sqlite3  manage.py  requirements.txt  tests.py
gemini/.config/nginx/: gemini.conf
gemini/.config/node/: node.service
gemini/.config/uwsgi/: gemini.ini  uwsgi.service
gemini/gemini/: asgi.py  settings.py  urls.py  wsgi.py
gemini/gemini_app/: apps.py  budrami.py  urls.py  views.py
gemini/gemini_app/static/css/: styles.css
gemini/gemini_app/static/js/: script.js
gemini/staticfiles/css/: styles.css
gemini/staticfiles/js/: script.js
gemini/templates/: index.html
tts-api/: index.js  package-lock.json  package.json
